--- a/SAM/Views/Shared/_Layout.cshtml
+++ b/SAM/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                             <h5 class="mb-0"><i class="bi bi-@(ViewData["TitleIcon"] ?? "file-text") me-2"></i>@ViewData["Title"]</h5>
                         </div>
                         <div class="user-menu">
-                            @await Html.PartialAsync("Partials/_CompanySelector")
+                            @* @await Html.PartialAsync("Partials/_CompanySelector") *@
                             @await Html.PartialAsync("Partials/_UserMenu")
                         </div>
                     </div>
