--- a/SAM/Views/UserManagement/UserRequests.cshtml
+++ b/SAM/Views/UserManagement/UserRequests.cshtml
@@ -44,9 +44,6 @@
 @if (isGlobalAdmin && companies != null)
 {
     <div class="card mb-3">
-        <div class="card-header">
-            <h5 class="mb-0"><i class="bi bi-funnel"></i> Filter</h5>
-        </div>
         <div class="card-body">
             <form method="get" class="row g-3">
                 <div class="col-md-4">
@@ -66,7 +63,7 @@
     </div>
 }
 
-<div class="card">
+<div class="card card-primary">
     <div class="card-header">
         <h5 class="mb-0"><i class="bi bi-list-ul"></i> User Request List</h5>
     </div>
