--- a/SAM/Views/OperationalData/GWMonits.cshtml
+++ b/SAM/Views/OperationalData/GWMonits.cshtml
@@ -43,9 +43,6 @@
 }
 
 <div class="card mb-3">
-    <div class="card-header">
-        <h5 class="mb-0"><i class="bi bi-funnel"></i> Filter</h5>
-    </div>
     <div class="card-body">
         <form method="get" class="row g-3">
             @if (isGlobalAdmin)
@@ -90,7 +87,7 @@
     </div>
 </div>
 
-<div class="card">
+<div class="card card-primary">
     <div class="card-header">
         <h5 class="mb-0"><i class="bi bi-list-ul"></i> Groundwater Monitoring List</h5>
     </div>
