--- a/SAM/Views/OperationalData/OperatorLogs.cshtml
+++ b/SAM/Views/OperationalData/OperatorLogs.cshtml
@@ -33,9 +33,6 @@
 }
 
 <div class="card mb-3">
-    <div class="card-header">
-        <h5 class="mb-0"><i class="bi bi-funnel"></i> Filter</h5>
-    </div>
     <div class="card-body">
         <form method="get" class="row g-3">
             @if (isGlobalAdmin)
@@ -65,7 +62,7 @@
     </div>
 </div>
 
-<div class="card">
+<div class="card card-primary">
     <div class="card-header">
         <h5 class="mb-0"><i class="bi bi-list-ul"></i> Operator Log List</h5>
     </div>
