--- a/SAM/Views/Reports/IrrigationReports.cshtml
+++ b/SAM/Views/Reports/IrrigationReports.cshtml
@@ -41,9 +41,6 @@
 }
 
 <div class="card mb-3">
-    <div class="card-header">
-        <h5 class="mb-0"><i class="bi bi-funnel"></i> Filter</h5>
-    </div>
     <div class="card-body">
         <form method="get" class="row g-3">
             @if (isGlobalAdmin)
@@ -73,7 +70,7 @@
     </div>
 </div>
 
-<div class="card">
+<div class="card card-primary">
     <div class="card-header">
         <h5 class="mb-0"><i class="bi bi-list-ul"></i> Irrigation Report List</h5>
     </div>
