--- a/SAM/Views/SystemAdmin/FacilityDetails.cshtml
+++ b/SAM/Views/SystemAdmin/FacilityDetails.cshtml
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<div class="card">
+<div class="card card-primary">
     <div class="card-header">
         <h5 class="mb-0"><i class="bi bi-building me-2"></i>@Model.Name</h5>
     </div>
