--- a/SAM/Views/UserManagement/UserRequests.cshtml
+++ b/SAM/Views/UserManagement/UserRequests.cshtml
@@ -41,26 +41,12 @@
     </div>
 }
 
-@if (isGlobalAdmin && companies != null)
+@{
+    var filterViewModel = ViewBag.FilterViewModel as SAM.ViewModels.Common.FilterViewModel;
+}
+@if (filterViewModel != null)
 {
-    <div class="card mb-3">
-        <div class="card-body">
-            <form method="get" class="row g-3">
-                <div class="col-md-4">
-                    <label for="companyId" class="form-label"><i class="bi bi-building me-1"></i>Filter by Company:</label>
-                    <select name="companyId" id="companyId" class="form-select" onchange="this.form.submit()">
-                        <option value="">All Companies</option>
-                        @foreach (var company in companies)
-                        {
-                            <option value="@company.Value" selected="@(selectedCompanyId.HasValue && selectedCompanyId.Value.ToString() == company.Value)">
-                                @company.Text
-                            </option>
-                        }
-                    </select>
-                </div>
-            </form>
-        </div>
-    </div>
+    @await Html.PartialAsync("Partials/_Filter", filterViewModel)
 }
 
 <div class="card card-primary">
